--- a/Client.Blazor/Shared/NavMenu.razor
+++ b/Client.Blazor/Shared/NavMenu.razor
@@ -28,6 +28,11 @@
                 </NavLink>
             </li>
             <li class="nav-item px-3">
+                <NavLink class="nav-link" href="scooters">
+                    <i class="fa fa-motorcycle" aria-hidden="true"></i> &nbsp;&nbsp;Rent a scooter
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
                 <button @onclick="DeleteSession" class="nav-link" style="
                                                                         background: transparent;
                                                                         border: none;
