--- a/Client.Blazor/Shared/NavMenu.razor
+++ b/Client.Blazor/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
             </li>
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="scooters">
-                    <i class="fa fa-motorcycle" aria-hidden="true"></i> &nbsp;&nbsp;Rent a scooter
+                    <i class="fa fa-motorcycle" aria-hidden="true"></i> &nbsp;Find a scooter
                 </NavLink>
             </li>
             <li class="nav-item px-3">
