Update logo on each page

--- a/Client.Blazor/Pages/Login.razor
+++ b/Client.Blazor/Pages/Login.razor
@@ -9,8 +9,7 @@
         <div class="container">
             <!-- Navbar Brand -->
             <a href="#" class="navbar-brand">
-                TrotIS logo
-                @*<img src="https://res.cloudinary.com/mhmd/image/upload/v1571398888/Group_1514_tjekh3_zkts1c.svg" alt="logo" width="150">*@
+                <img src="Resources/logo.png" alt="logo" width="150" />
             </a>
         </div>
     </nav>
@@ -18,10 +17,9 @@
 
 
 <div class="container">
-    <div class="row py-5 mt-4 align-items-center">
+    <div class="row mt-4 align-items-center">
         <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
             <img src="https://res.cloudinary.com/mhmd/image/upload/v1569543678/form_d9sh6m.svg" alt="" class="img-fluid mb-3 d-none d-md-block">
-            <h1>Log in !</h1>
         </div>
 
         <!-- Login Form -->
