--- a/Client.Blazor/Pages/Register.razor
+++ b/Client.Blazor/Pages/Register.razor
@@ -10,8 +10,7 @@
         <div class="container">
             <!-- Navbar Brand -->
             <a href="#" class="navbar-brand">
-                TrotIS logo
-                @*<img src="https://res.cloudinary.com/mhmd/image/upload/v1571398888/Group_1514_tjekh3_zkts1c.svg" alt="logo" width="150">*@
+                <img src="Resources/logo.png" alt="logo" width="150" />
             </a>
         </div>
     </nav>
@@ -19,21 +18,15 @@
 
 
 <div class="container">
-    <div class="row py-5 mt-4 align-items-center">
+    <div class="row mt-4 align-items-center">
         <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
             <img src="https://res.cloudinary.com/mhmd/image/upload/v1569543678/form_d9sh6m.svg" alt="" class="img-fluid mb-3 d-none d-md-block">
-            <h1>Create an Account</h1>
         </div>
 
         <!-- Registeration Form -->
         <div class="col-md-7 col-lg-6 ml-auto">
 
             <EditForm Model="@user" OnInvalidSubmit="@HandleInvalidSubmit" OnValidSubmit="@RegisterUser">
-
-
-                <div class="form-group">
-
-                </div>
                 @*Firstname*@
                 <div class="input-group col-lg-12 mb-4">
                     <div class="input-group-prepend">
