--- a/Client.Blazor/Shared/MainLayout.razor
+++ b/Client.Blazor/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
     @if (fname != null)
     {
     <div class="top-row px-4">
-        Hello,<a href="/login"> @fname @lname</a>
+        Hello, @fname @lname
     </div>
     }
     else
